# HMM

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  README  README.rst  hmm.R  mainpage.dox
Examples/: CMakeLists.txt  letters.cpp  martian.cpp
R/: README.md
examples/: CMakeLists.txt  DiscreteHMM_constructor.cxx  baumwelch.cxx  martian.cxx
include/: HMM.h  HMM.hpp  HMMBasicTypes.h  HMMBasicTypes.hpp  HMMPathType.h  HMMUtils.h  HMMUtils.hpp  HiddenMarkovModelsNamespace.h
python/: convergence.py  discrete_hmm.py  entropy_map.py  probability.py
spike/: CMakeLists.txt
spike/HMM/: CMakeCache.txt  CMakeLists.txt  Doxyfile.in  toto.txt
spike/HMM/examples/: CMakeLists.txt  DiscreteHMM_constructor.cxx  baumwelch.cxx  martian.cxx  multiple_sequence_baumwelch.cxx  multiple_sequence_baumwelch2.cxx  viterbi.cxx
spike/HMM/include/: DiscreteHMM.h  HMMBasicTypes.h  HMMIOUtils.h  HMMUtils.h  HiddenMarkovModelsNamespace.h  ProgressBar.h
spike/HMM/python/: entropy_map.py  hmm.py
spike/HMM/src/: DiscreteHMM.cxx  HMMIOUtils.cxx  HMMPathType.cxx  HMMUtils.cxx  ProgressBar.cxx
spike/include/: HMM.h  HMM_config.h.in
spike/src/: CMakeLists.txt  HMM.cpp
src/: DiscreteHMM.cxx  HMM.cpp  HMMIOUtils.cxx  HMMUtils.cpp  HMMUtils.cxx  Makefile  main.cpp
